--- a/index.html
+++ b/index.html
@@ -67,28 +67,28 @@
    							<div class="menu_nav_in">
    								<div class="menu_nav_content scrollable">
 									<ul class="vert_nav">
-										<li><a href="index.html">Home</a></li>
+										<li><a href="index.html">主页</a></li>
 										<li class="active1">
-											<a href="#">Projects</a>
+											<a href="#">项目</a>
 											<div class="inside_menu">
 												<ul>
-													<li><a href="project.html">Project</a></li>
-													<li><a href="project-single.html">Project Single</a></li>
+													<li><a href="project.html">所有项目</a></li>
+													<li><a href="project-single.html">单一项目</a></li>
 												</ul>
 											</div>
 										</li>
 										<li class="active1">
-											<a href="#">Our Services</a>
+											<a href="#">服务</a>
 											<div class="inside_menu">
 												<ul>
-													<li><a href="service.html">Service</a></li>
-													<li><a href="service-single.html">Service Single</a></li>
+													<li><a href="service.html">所有服务</a></li>
+													<li><a href="service-single.html">单一服务</a></li>
 												</ul>
 											</div>
 										</li>
-										<li><a href="about.html">About Us</a></li>
-										<li><a href="blog.html">Blog</a></li>
-										<li><a href="contact.html">Contact</a></li>
+										<li><a href="about.html">关于</a></li>
+										<li><a href="blog.html">新闻</a></li>
+										<li><a href="contact.html">联系</a></li>
 									</ul>
    								</div>
    							</div>
